Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -330,7 +330,6 @@ hr.line {
 }
 
 .widget.extendednavigation ul {
-	text-align: center;
 	max-width: 1000px;
 	margin: 0 auto;
 	float: none;
